Statefull.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-sts
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app-s
  template:
    metadata:
      labels:
        app: my-app-s
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
