ingress-sc-pvc.yml

apiVersion: v1
kind: Pod 
metadata:
  name: mobile-app
  labels:
   app: mobile-app
spec:
  containers: 
    - name: mobile-app
      image: nginx:latest
      ports:
        - containerPort: 80
      volumeMounts:
        - name: ebs-vol
          mountPath: /usr/share/nginx/html
  volumes:
    - name: ebs-vol 
      persistentVolumeClaim:
          claimName: my-ebs-pvc

---
apiVersion: v1  
kind: Service
metadata: 
  name: mobile-app-svc
spec:
  selector:
    app: mobile-app
  ports:
    - port: 80
      targetPort: 80  
      protocol: TCP
