ingress.yml
apiVersion: v1
kind: Pod
metadata:
  name: mobile-app
  labels:
   app: mobile-app
spec:
  containers:
    - name: mobile-app
      image: nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mobile-app-svc
spec:
  selector:
    app: mobile-app
  ports:
    - port: 80
      targetPort: 80  
      protocol: TCP
  

---
apiVersion: v1
kind: Pod
metadata:
  name: cloth-app
  labels:
   app: cloth-app
spec:
  containers:
    - name: cloth-app
      image: httpd:latest
      ports:
        - containerPort: 80

        
---
apiVersion: v1
kind: Service
metadata:
  name: cloth-app-svc
spec:
  selector:
    app: cloth-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /mobile
            pathType: Prefix
            backend:
              service:
                name: mobile-app-svc
                port:
                  number: 80
          - path: /cloth
            pathType: Prefix
            backend:
              service:
                name: cloth-app-svc
                port:
                  number: 80
      host: a4bbbca48998c4a398141159a6d9d010-1072058284.us-east-2.elb.amazonaws.com
